--- a/index.html
+++ b/index.html
@@ -81,12 +81,12 @@
       <li>
         <div class="name">有馬トモユキ</div>
         <div class="url"><a href="http://twitter.com/tatsdesign" target="_blank">@tatsdesign</a></div>
-        <div class="role">Concept, Creative Direction, Design</div>
+        <div class="role">Concept Design, Creative Direction, Design</div>
       </li>
       <li>
         <div class="name">瀬島卓也</div>
         <div class="url"><a href="http://twitter.com/sezitak" target="_blank">@sezitak</a></div>
-        <div class="role">Concept, Planning</div>
+        <div class="role">Concept Design, Planning</div>
       </li>
       <li>
         <div class="name">kirusu</div>
