--- a/index.html
+++ b/index.html
@@ -18,7 +18,7 @@
 
   <meta property="article:publisher" content="dswd" />
 
-  <link rel="stylesheet" href="css/style.css" />
+  <link rel="stylesheet" href="/css/style.css" />
 
   <!--[if lt IE 9]>
     <script src="//html5shiv.googlecode.com/svn/trunk/html5.js"></script>
@@ -27,7 +27,7 @@
 </head>
 <body>
   <header>
-    <p class="logo"><img src="images/dd.svg" width="150" alt="DAISYWORLD"></p>
+    <p class="logo"><img src="/images/dd.svg" width="150" alt="DAISYWORLD"></p>
     <h1><span>DAISYWORLD</span></h1>
     <p>Open Source Science Fiction Project</p>
   </header>
@@ -158,11 +158,11 @@
     </ul>
   </article>
   <footer>
-    <p>&copy; 2015 DAISYWORLD | <a href="http://twitter.com/daisyworld_info">@daisyworld_info</a></p>
+    <p>&copy; 2015 DAISYWORLD | <a href="http://twitter.com/daisyworld_info" target="_blank">@daisyworld_info</a></p>
   </footer>
 
   <script src="https://ajax.googleapis.com/ajax/libs/jquery/2.1.3/jquery.min.js"></script>
-  <script src="js/scripts.js"></script>
+  <script src="/js/scripts.js"></script>
   <script>
     (function(i,s,o,g,r,a,m){i['GoogleAnalyticsObject']=r;i[r]=i[r]||function(){
     (i[r].q=i[r].q||[]).push(arguments)},i[r].l=1*new Date();a=s.createElement(o),
