--- a/dswd2/index.html
+++ b/dswd2/index.html
@@ -7,7 +7,7 @@
 
   <meta name="description" content="A platform of science fiction&#039;s world for creators" />
   <meta name="keywords" content="DAISYWORLD,SF,Science Fiction,コミックマーケット,COMICMARKET,コミケ,tatsdesign,sezitak,kirusu,ginrei,mashana,shachi,yam_cha,toshiki_izumi" />
-  <meta name="viewport" content="width=device-width">
+  <meta name="viewport" content="width=1000px">
 
   <meta property="og:title" content="DAISYWORLD" />
   <meta property="og:description" content="A platform of science fiction&#039;s world for creators" />
