“DAISYWORLD: AGMHS”に変更

--- a/index.html
+++ b/index.html
@@ -123,12 +123,12 @@
       <li>
         <div class="name">田中寛崇</div>
         <div class="url"><a href="http://twitter.com/tanakahirotaka" target="_blank">@tanakahirotaka</a></div>
-        <div class="role">Guest Illustration on “DAISYWORLD: A GIRL MEETS HER SISTER”</div>
+        <div class="role">Guest Illustration on “DAISYWORLD: AGMHS”</div>
       </li>
       <li>
         <div class="name">はみ</div>
         <div class="url"><a href="http://twitter.com/hami_mi" target="_blank">@hami_mi</a></div>
-        <div class="role">Guest Illustration on “DAISYWORLD: A GIRL MEETS HER SISTER”</div>
+        <div class="role">Guest Illustration on “DAISYWORLD: AGMHS”</div>
       </li>
       <li>
         <div class="name">KEI</div>
