実体参照に変換

--- a/dswd1/index.html
+++ b/dswd1/index.html
@@ -6,7 +6,7 @@
   <title>DAISYWORLD 1 | DAISYWORLD</title>
 
   <meta name="description" content="A platform of science fiction&#039;s world for creators" />
-  <meta name="keywords" content="DAISYWORLD,SF,Science Fiction,コミックマーケット,COMICMARKET,コミケ,tatsdesign,sezitak,kirusu,ginrei,mashana,shachi,yam_cha,toshiki_izumi" />
+  <meta name="keywords" content="DAISYWORLD,SF,Science Fiction,コミックマーケット,COMICMARKET,コミケ,C87,tatsdesign,sezitak,kirusu,ginrei,mashana,shachi,yam_cha,toshiki_izumi" />
   <meta name="viewport" content="width=1000px">
 
   <meta property="og:title" content="DAISYWORLD" />
@@ -39,8 +39,8 @@
     <p>Concept Book / 260mm x 210mm, 24 Pages</p>
   </header>
   <article id="product">
-    <h2>A.D.2014.12.30 Comic Market 87 3日目<br>東ラ-51ab “Futon. + DAISYWORLD”（<a href="http://webcatalog.circle.ms/Circle/11942091">circle.ms</a>）</h2>
-    <p class="lead">Concept Book for - ORIGINAL Sci-Fi World Generating System “DAISYWORLD”</p>
+    <h2>A.D.2014.12.30 Comic Market 87 3日目<br>東ラ-51ab &ldquo;Futon. + DAISYWORLD&rdquo;（<a href="http://webcatalog.circle.ms/Circle/11942091">circle.ms</a>）</h2>
+    <p class="lead">Concept Book for - ORIGINAL Sci-Fi World Generating System &ldquo;DAISYWORLD&rdquo;</p>
     <ul class="spec">
       <li>
         <div class="code">DSWD1</div>
