--- a/dswd2/index.html
+++ b/dswd2/index.html
@@ -3,10 +3,10 @@
 <head>
 
   <meta charset="utf-8">
-  <title>DAISYWORLD 1 | DAISYWORLD</title>
+  <title>DAISYWORLD: A GIRL MEETS HER SISTER | DAISYWORLD</title>
 
   <meta name="description" content="A platform of science fiction&#039;s world for creators" />
-  <meta name="keywords" content="DAISYWORLD,SF,Science Fiction,コミックマーケット,COMICMARKET,コミケ,tatsdesign,sezitak,kirusu,ginrei,mashana,shachi,yam_cha,toshiki_izumi" />
+  <meta name="keywords" content="DAISYWORLD,SF,Science Fiction,コミックマーケット,COMICMARKET,コミケ,C88,tatsdesign,sezitak,kirusu,ginrei,mashana,shachi,yam_cha,toshiki_izumi" />
   <meta name="viewport" content="width=1000px">
 
   <meta property="og:title" content="DAISYWORLD" />
@@ -39,7 +39,7 @@
     <p>Picture and Storytelling / 182mm x 182mm, 32 Pages</p>
   </header>
   <article id="product">
-    <h2>A.D.2015.8.16 Comic Market 88 3日目<br>西り-26ab “Futon. + DAISYWORLD”（<a href="http://webcatalog.circle.ms/Circle/11942091">circle.ms</a>）</h2>
+    <h2>A.D.2015.8.16 Comic Market 88 3日目<br>西り-26ab &ldquo;Futon. + DAISYWORLD&rdquo;（<a href="http://webcatalog.circle.ms/Circle/11942091">circle.ms</a>）</h2>
     <p class="lead">Picture and Storytelling Book based on DAISYWORLD Settings</p>
     <ul class="spec">
       <li>
@@ -126,12 +126,12 @@
       <li>
         <div class="name">shachi</div>
         <div class="url"><a href="http://twitter.com/shachi" target="_blank">@shachi</a></div>
-        <div class="role">Story of “DAISYWORLD: A GIRL MEETS HER SISTER”</div>
+        <div class="role">Story of &ldquo;DAISYWORLD: A GIRL MEETS HER SISTER&rdquo;</div>
       </li>
       <li>
         <div class="name">やむ茶</div>
         <div class="url"><a href="http://twitter.com/yam_cha" target="_blank">@yam_cha</a></div>
-        <div class="role">Illusration of “DAISYWORLD: A GIRL MEETS HER SISTER”</div>
+        <div class="role">Illusration of &ldquo;DAISYWORLD: A GIRL MEETS HER SISTER&rdquo;</div>
       </li>
       <li>
         <div class="name">Toshiki Izumi</div>
