--- a/index.html
+++ b/index.html
@@ -123,37 +123,37 @@
       <li>
         <div class="name">田中寛崇</div>
         <div class="url"><a href="http://twitter.com/tanakahirotaka" target="_blank">@tanakahirotaka</a></div>
-        <div class="role">Guest Illustration on “DAISYWORLD: AGMHS”</div>
+        <div class="role">Guest Illustration on &ldquo;DAISYWORLD: AGMHS&rdquo;</div>
       </li>
       <li>
         <div class="name">はみ</div>
         <div class="url"><a href="http://twitter.com/hami_mi" target="_blank">@hami_mi</a></div>
-        <div class="role">Guest Illustration on “DAISYWORLD: AGMHS”</div>
+        <div class="role">Guest Illustration on &ldquo;DAISYWORLD: AGMHS&rdquo;</div>
       </li>
       <li>
         <div class="name">KEI</div>
         <div class="url"><a href="http://twitter.com/keigarou" target="_blank">@keigarou</a></div>
-        <div class="role">Guest Illustration on “DAISYWORLD 1”</div>
+        <div class="role">Guest Illustration on &ldquo;DAISYWORLD 1&rdquo;</div>
       </li>
       <li>
         <div class="name">草野剛</div>
         <div class="url"><a href="http://twitter.com/ksnty" target="_blank">@ksnty</a></div>
-        <div class="role">Guest Illustration on “DAISYWORLD 1”</div>
+        <div class="role">Guest Illustration on &ldquo;DAISYWORLD 1&rdquo;</div>
       </li>
       <li>
         <div class="name">いぬ</div>
         <div class="url"><a href="http://twitter.com/hokenjo" target="_blank">@hokenjo</a></div>
-        <div class="role">Guest Illustration on “DAISYWORLD 1”</div>
+        <div class="role">Guest Illustration on &ldquo;DAISYWORLD 1&rdquo;</div>
       </li>
       <li>
         <div class="name">robamoto</div>
         <div class="url"><a href="http://twitter.com/robamoto" target="_blank">@robamoto</a></div>
-        <div class="role">Guest Illustration on “DAISYWORLD 1”</div>
+        <div class="role">Guest Illustration on &ldquo;DAISYWORLD 1&rdquo;</div>
       </li>
       <li>
         <div class="name">eihi</div>
         <div class="url"><a href="http://twitter.com/eihi" target="_blank">@eihi</a></div>
-        <div class="role">Guest Illustration on “DAISYWORLD 1”</div>
+        <div class="role">Guest Illustration on &ldquo;DAISYWORLD 1&rdquo;</div>
       </li>
     </ul>
   </article>
