--- a/dswd2/index.html
+++ b/dswd2/index.html
@@ -3,7 +3,7 @@
 <head>
 
   <meta charset="utf-8">
-  <title>DAISYWORLD: A GIRL MEETS HER SISTER | DAISYWORLD</title>
+  <title>DAISYWORLD: A GIRL MEETS HER SISTER</title>
 
   <meta name="description" content="A platform of science fiction&#039;s world for creators" />
   <meta name="keywords" content="DAISYWORLD,SF,Science Fiction,コミックマーケット,COMICMARKET,コミケ,C88,tatsdesign,sezitak,kirusu,ginrei,mashana,shachi,yam_cha,toshiki_izumi" />
