--- a/dswd1/index.html
+++ b/dswd1/index.html
@@ -3,7 +3,7 @@
 <head>
 
   <meta charset="utf-8">
-  <title>DAISYWORLD 1 | DAISYWORLD</title>
+  <title>DAISYWORLD 1</title>
 
   <meta name="description" content="A platform of science fiction&#039;s world for creators" />
   <meta name="keywords" content="DAISYWORLD,SF,Science Fiction,コミックマーケット,COMICMARKET,コミケ,C87,tatsdesign,sezitak,kirusu,ginrei,mashana,shachi,yam_cha,toshiki_izumi" />
