アカウントとCSS修正

--- a/dswd1/index.html
+++ b/dswd1/index.html
@@ -77,7 +77,7 @@
   </article>
   <article id="about">
     <h2>内容紹介</h2>
-    <p>オリジナルのSF世界観設定本「DAISYWORLD」を作成しました。 <a href="http://twitter.com/tatsdesign" target="_blank">@tatsdesign</a> と <a href="http://twitter.com/sezitak" target="_blank">@sezitak</a> が初期設定を、スーパーバイザーに <a href="http://twitter.com/ginrei" target="_blank">@ginrei</a> を、コンセプトデザインに <a href="http://twitter.com/mashana" target="_blank">@mashana</a> を、そしてキャラクターデザインに <a href="http://twitter.com/sezitak" target="_blank">@kirusu</a> さんをお招きしました。サークル最初の本として、最低限の世界観とプロットの定義やコンセプトビジュアル、キャラクターデザインを掲載しています。</p>
+    <p>オリジナルのSF世界観設定本「DAISYWORLD」を作成しました。 <a href="http://twitter.com/tatsdesign" target="_blank">@tatsdesign</a> と <a href="http://twitter.com/sezitak" target="_blank">@sezitak</a> が初期設定を、スーパーバイザーに <a href="http://twitter.com/ginrei" target="_blank">@ginrei</a> を、コンセプトデザインに <a href="http://twitter.com/mashana" target="_blank">@mashana</a> を、そしてキャラクターデザインに <a href="http://twitter.com/kirusu" target="_blank">@kirusu</a> さんをお招きしました。サークル最初の本として、最低限の世界観とプロットの定義やコンセプトビジュアル、キャラクターデザインを掲載しています。</p>
     <p>これは、僕たちだけではなく、お手に取っていただいたみなさんで作っていきたい架空の世界です。宜しければ是非ご覧ください。</p>
     <ul class="detail">
       <li>
@@ -117,7 +117,7 @@
       </li>
       <li>
         <div class="name">kirusu</div>
-        <div class="url"><a href="http://twitter.com/sezitak" target="_blank">@kirusu</a></div>
+        <div class="url"><a href="http://twitter.com/kirusu" target="_blank">@kirusu</a></div>
         <div class="role">Character Design, Illustration</div>
       </li>
       <li>
