--- a/dswd2/index.html
+++ b/dswd2/index.html
@@ -63,7 +63,7 @@
     <h2>Buy on shop</h2>
     <ul class="links">
       <li class="disable">COMIC ZIN</li>
-      <li><a href="https://diverse.direct/daisyworld/dswd1/"  target="_blank">DIVERSE DIRECT</a></li>
+      <li class="disable">DIVERSE DIRECT</li>
     </ul>
   </article>
   <article id="cuts">
@@ -78,7 +78,7 @@
   <article id="about">
     <h2>内容紹介</h2>
     <p>DAISYWORLDの最初のキャラクターは、100年後から呼び出された「新知性」と呼ばれる存在「デイジー」です。<br>彼女と現代の人類が彼女を模倣して開発した、ステムと呼ばれるアンドロイド群の一人「ミラ」の出会いをエンジニア / 作家である <a href="http://twitter.com/shachi" target="_blank">@shachi</a> さんによるストーリーを基に絵本のかたちに編集しました。</p>
-    <p>2人の出会いはまったくの対象形に描かれています。正方形フォーマットの本はリバーシブルの表紙で、片方がデイジーの視点から描かれるストーリー、そしてもう片方がミラの視点となっています。2人の視点の違いを出すために、デイジーのストーリーを描写した <a href="http://twitter.com/sezitak" target="_blank">@kirusu</a> さんに加えて <a href="http://twitter.com/yam_cha" target="_blank">@yam_cha</a> さんにミラ側のストーリーをご担当いただいています。お二人が異なる解釈によって取り組まれたイラストレーションの数々を是非、ご覧ください。</p>
+    <p>2人の出会いはまったくの対象形に描かれています。正方形フォーマットの本はリバーシブルの表紙で、片方がデイジーの視点から描かれるストーリー、そしてもう片方がミラの視点となっています。2人の視点の違いを出すために、デイジーのストーリーを描写した <a href="http://twitter.com/kirusu" target="_blank">@kirusu</a> さんに加えて <a href="http://twitter.com/yam_cha" target="_blank">@yam_cha</a> さんにミラ側のストーリーをご担当いただいています。お二人が異なる解釈によって取り組まれたイラストレーションの数々を是非、ご覧ください。</p>
     <p>加えて、気鋭のイラストレーター・ <a href="http://twitter.com/tanakahirotaka" target="_blank">@tanakahirotaka</a> さんと <a href="http://twitter.com/hami_mi" target="_blank">@hami_mi</a> さんに寄って描かれたゲストイラストレーションや、デイジーとミラが使用しているガジェットについての設定と解説も追加しています。こちらも併せて、お楽しみいただければと思います。</p>
     <ul class="detail">
       <li>
@@ -110,7 +110,7 @@
       </li>
       <li>
         <div class="name">kirusu</div>
-        <div class="url"><a href="http://twitter.com/sezitak" target="_blank">@kirusu</a></div>
+        <div class="url"><a href="http://twitter.com/kirusu" target="_blank">@kirusu</a></div>
         <div class="role">Character Design, Illustration</div>
       </li>
       <li>
