--- a/index.html
+++ b/index.html
@@ -90,7 +90,7 @@
       </li>
       <li>
         <div class="name">kirusu</div>
-        <div class="url"><a href="http://twitter.com/sezitak" target="_blank">@kirusu</a></div>
+        <div class="url"><a href="http://twitter.com/kirusu" target="_blank">@kirusu</a></div>
         <div class="role">Character Design</div>
       </li>
       <li>
