--- a/dswd1/index.html
+++ b/dswd1/index.html
@@ -15,9 +15,9 @@
   <meta property="og:url" content="daisyworld.github.io" />
   <meta property="og:image" content="" />
   <meta property="og:site_name" content="DAISYWORLD" />
+  <meta property="article:publisher" content="DAISYWORLD" />
 
-  <meta property="article:publisher" content="dswd" />
-
+  <link rel="shortcut icon" href="/images/icon.png">
   <link rel="stylesheet" href="/css/style.css" />
 
   <!--[if lt IE 9]>
