twitter cards facebook ogp

--- a/index.html
+++ b/index.html
@@ -5,17 +5,23 @@
   <meta charset="utf-8">
   <title>DAISYWORLD</title>
 
-  <meta name="description" content="A platform of science fiction&#039;s world for creators" />
+  <meta name="description" content="DAISYWORLDは現代を舞台にした架空のSFの世界観設定集です。最新の設定や世界観、またそれを使用した制作物も定期的に制作しています。" />
   <meta name="keywords" content="DAISYWORLD,SF,Science Fiction,コミックマーケット,COMICMARKET,コミケ,tatsdesign,sezitak,kirusu,ginrei,mashana,shachi,yam_cha,toshiki_izumi" />
   <meta name="viewport" content="width=1000px">
 
   <meta property="og:title" content="DAISYWORLD" />
-  <meta property="og:description" content="A platform of science fiction&#039;s world for creators" />
+  <meta property="og:description" content="DAISYWORLDは現代を舞台にした架空のSFの世界観設定集です。最新の設定や世界観、またそれを使用した制作物も定期的に制作しています。" />
   <meta property="og:type" content="website" />
-  <meta property="og:url" content="daisyworld.github.io" />
+  <meta property="og:url" content="http://dswd.jp/" />
   <meta property="og:image" content="" />
   <meta property="og:site_name" content="DAISYWORLD" />
   <meta property="article:publisher" content="DAISYWORLD" />
+
+  <meta name="twitter:card" content="summary">
+  <meta name="twitter:site" content="@daisyworld_info">
+  <meta name="twitter:title" content="DAISYWORLD">
+  <meta name="twitter:description" content="DAISYWORLDは現代を舞台にした架空のSFの世界観設定集です。最新の設定や世界観、またそれを使用した制作物も定期的に制作しています。">
+  <meta name="twitter:image" content="/images/icon.png">
 
   <link rel="shortcut icon" href="/images/icon.png">
   <link rel="stylesheet" href="/css/style.css" />
