--- a/dswd1/index.html
+++ b/dswd1/index.html
@@ -5,17 +5,23 @@
   <meta charset="utf-8">
   <title>DAISYWORLD 1</title>
 
-  <meta name="description" content="A platform of science fiction&#039;s world for creators" />
+  <meta name="description" content="創作SFコンセプトブック「DAISYWORLD 1」は2014.12.30のC87・3日目に東ラ-51abにて頒布されます。" />
   <meta name="keywords" content="DAISYWORLD,SF,Science Fiction,コミックマーケット,COMICMARKET,コミケ,C87,tatsdesign,sezitak,kirusu,ginrei,mashana,shachi,yam_cha,toshiki_izumi" />
   <meta name="viewport" content="width=1000px">
 
   <meta property="og:title" content="DAISYWORLD" />
-  <meta property="og:description" content="A platform of science fiction&#039;s world for creators" />
+  <meta property="og:description" content="創作SFコンセプトブック「DAISYWORLD 1」は2014.12.30のC87・3日目に東ラ-51abにて頒布されます。" />
   <meta property="og:type" content="website" />
-  <meta property="og:url" content="daisyworld.github.io" />
-  <meta property="og:image" content="" />
+  <meta property="og:url" content="http://dswd.jp/" />
+  <meta property="og:image" content="/images/dswd1/card.png" />
   <meta property="og:site_name" content="DAISYWORLD" />
   <meta property="article:publisher" content="DAISYWORLD" />
+
+  <meta name="twitter:card" content="summary">
+  <meta name="twitter:site" content="@daisyworld_info">
+  <meta name="twitter:title" content="DAISYWORLD 1">
+  <meta name="twitter:description" content="創作SFコンセプトブック「DAISYWORLD 1」は2014.12.30のC87・3日目に東ラ-51abにて頒布されます。">
+  <meta name="twitter:image" content="/images/dswd1/card.png">
 
   <link rel="shortcut icon" href="/images/icon.png">
   <link rel="stylesheet" href="/css/style.css" />
