--- a/dswd2/index.html
+++ b/dswd2/index.html
@@ -9,13 +9,19 @@
   <meta name="keywords" content="DAISYWORLD,SF,Science Fiction,コミックマーケット,COMICMARKET,コミケ,C88,tatsdesign,sezitak,kirusu,ginrei,mashana,shachi,yam_cha,toshiki_izumi" />
   <meta name="viewport" content="width=1000px">
 
-  <meta property="og:title" content="DAISYWORLD" />
-  <meta property="og:description" content="A platform of science fiction&#039;s world for creators" />
+  <meta property="og:title" content="DAISYWORLD: A GIRL MEETS HER SISTER" />
+  <meta property="og:description" content="創作SF絵本「DAISYWORLD: A GIRL MEETS HER SISTER」は2015.8.16のC88・3日目に西り-26abにて頒布されます。" />
   <meta property="og:type" content="website" />
-  <meta property="og:url" content="daisyworld.github.io" />
-  <meta property="og:image" content="" />
+  <meta property="og:url" content="http://dswd.jp/" />
+  <meta property="og:image" content="/images/dswd2/card.png" />
   <meta property="og:site_name" content="DAISYWORLD" />
   <meta property="article:publisher" content="DAISYWORLD" />
+
+  <meta name="twitter:card" content="summary">
+  <meta name="twitter:site" content="@daisyworld_info">
+  <meta name="twitter:title" content="DAISYWORLD: A GIRL MEETS HER SISTER">
+  <meta name="twitter:description" content="創作SF絵本「DAISYWORLD: A GIRL MEETS HER SISTER」は2015.8.16のC88・3日目に西り-26abにて頒布されます。">
+  <meta name="twitter:image" content="/images/dswd2/card.png">
 
   <link rel="shortcut icon" href="/images/icon.png">
   <link rel="stylesheet" href="/css/style.css" />
