--- a/dswd2/index.html
+++ b/dswd2/index.html
@@ -17,7 +17,7 @@
   <meta property="og:site_name" content="DAISYWORLD" />
   <meta property="article:publisher" content="DAISYWORLD" />
 
-  <meta name="twitter:card" content="summary">
+  <meta name="twitter:card" content="summary_large_image">
   <meta name="twitter:site" content="@daisyworld_info">
   <meta name="twitter:title" content="DAISYWORLD: A GIRL MEETS HER SISTER">
   <meta name="twitter:description" content="創作SF絵本「DAISYWORLD: A GIRL MEETS HER SISTER」は2015.8.16のC88・3日目に西り-26abにて頒布されます。">
