--- a/dswd1/index.html
+++ b/dswd1/index.html
@@ -17,7 +17,7 @@
   <meta property="og:site_name" content="DAISYWORLD" />
   <meta property="article:publisher" content="DAISYWORLD" />
 
-  <meta name="twitter:card" content="summary">
+  <meta name="twitter:card" content="summary_large_image">
   <meta name="twitter:site" content="@daisyworld_info">
   <meta name="twitter:title" content="DAISYWORLD 1">
   <meta name="twitter:description" content="創作SFコンセプトブック「DAISYWORLD 1」は2014.12.30のC87・3日目に東ラ-51abにて頒布されます。">
