--- a/dswd1/index.html
+++ b/dswd1/index.html
@@ -21,7 +21,7 @@
   <meta name="twitter:site" content="@daisyworld_info">
   <meta name="twitter:title" content="DAISYWORLD 1">
   <meta name="twitter:description" content="創作SFコンセプトブック「DAISYWORLD 1」は2014.12.30のC87・3日目に東ラ-51abにて頒布されます。">
-  <meta name="twitter:image" content="/images/dswd1/card.png">
+  <meta name="twitter:image" content="http://dswd.jp/images/dswd1/card.png">
 
   <link rel="shortcut icon" href="/images/icon.png">
   <link rel="stylesheet" href="/css/style.css" />
