--- a/dswd2/index.html
+++ b/dswd2/index.html
@@ -21,7 +21,7 @@
   <meta name="twitter:site" content="@daisyworld_info">
   <meta name="twitter:title" content="DAISYWORLD: A GIRL MEETS HER SISTER">
   <meta name="twitter:description" content="創作SF絵本「DAISYWORLD: A GIRL MEETS HER SISTER」は2015.8.16のC88・3日目に西り-26abにて頒布されます。">
-  <meta name="twitter:image" content="/images/dswd2/card.png">
+  <meta name="twitter:image" content="http://dswd.jp/images/dswd2/card.png">
 
   <link rel="shortcut icon" href="/images/icon.png">
   <link rel="stylesheet" href="/css/style.css" />
