--- a/dswd2/index.html
+++ b/dswd2/index.html
@@ -12,7 +12,7 @@
   <meta property="og:title" content="DAISYWORLD: A GIRL MEETS HER SISTER" />
   <meta property="og:description" content="創作SF絵本「DAISYWORLD: A GIRL MEETS HER SISTER」は2015.8.16のC88・3日目に西り-26abにて頒布されます。" />
   <meta property="og:type" content="website" />
-  <meta property="og:url" content="http://dswd.jp/" />
+  <meta property="og:url" content="http://daisyworld.github.io/dswd/2" />
   <meta property="og:image" content="/images/dswd2/card.png" />
   <meta property="og:site_name" content="DAISYWORLD" />
   <meta property="article:publisher" content="DAISYWORLD" />
