--- a/index.html
+++ b/index.html
@@ -12,7 +12,7 @@
   <meta property="og:title" content="DAISYWORLD" />
   <meta property="og:description" content="DAISYWORLDは現代を舞台にした架空のSFの世界観設定集です。最新の設定や世界観、またそれを使用した制作物も定期的に制作しています。" />
   <meta property="og:type" content="website" />
-  <meta property="og:url" content="http://dswd.jp/" />
+  <meta property="og:url" content="http://daisyworld.github.io/" />
   <meta property="og:image" content="" />
   <meta property="og:site_name" content="DAISYWORLD" />
   <meta property="article:publisher" content="DAISYWORLD" />
