--- a/dswd1/index.html
+++ b/dswd1/index.html
@@ -12,9 +12,10 @@
   <meta property="og:title" content="DAISYWORLD" />
   <meta property="og:description" content="創作SFコンセプトブック「DAISYWORLD 1」は2014.12.30のC87・3日目に東ラ-51abにて頒布されます。" />
   <meta property="og:type" content="website" />
-  <meta property="og:url" content="http://daisyworld.github.io/dswd/1" />
-  <meta property="og:image" content="/images/dswd1/card.png" />
+  <meta property="og:url" content="http://dswd.jp/dswd/1" />
+  <meta property="og:image" content="http://dswd.jp/images/dswd1/card.png" />
   <meta property="og:site_name" content="DAISYWORLD" />
+
   <meta property="article:publisher" content="DAISYWORLD" />
 
   <meta name="twitter:card" content="summary_large_image">
