文言変更とURL変更

--- a/index.html
+++ b/index.html
@@ -73,10 +73,10 @@
     <p>DAISYWORLDの設定を使用したメンバー以外の方の制作物をご紹介しています。<br>もしあなたがコンテンツを制作された場合、是非 <a href="http://twitter.com/tatsdesign" target="_blank">@tatsdesign</a> もしくは <a href="http://twitter.com/sezitak" target="_blank">@sezitak</a> にお知らせください。</p>
     <ul class="links">
       <li>
-        <a href="http://twitter.com/amagi_over" target="_blank">http://twitter.com/amagi_over</a>
+        <a href="https://webcatalog.circle.ms/Circle/11936014" target="_blank">widz</a>
       </li>
       <li>
-        <a href="http://twitter.com/741ksk" target="_blank">http://twitter.com/741ksk</a>
+        <a href="https://webcatalog.circle.ms/Circle/11909520" target="_blank">法政大学声優研究会</a>
       </li>
     </ul>
   </article>
