--- a/dswd2/index.html
+++ b/dswd2/index.html
@@ -70,7 +70,7 @@
     <h2>Buy on shop</h2>
     <ul class="links">
       <li class="disable">COMIC ZIN</li>
-      <li class="disable">DIVERSE DIRECT</li>
+      <li class="disable"><a href="https://diverse.direct/daisyworld/dswd2/"  target="_blank">DIVERSE DIRECT</a></li>
     </ul>
   </article>
   <article id="cuts">
