--- a/dswd2/index.html
+++ b/dswd2/index.html
@@ -69,8 +69,8 @@
   <article id="buy">
     <h2>Buy on shop</h2>
     <ul class="links">
-      <li class="disable"><a href="http://shop.comiczin.jp/products/detail.php?product_id=25663"  target="_blank">COMIC ZIN</a></li>
-      <li class="disable"><a href="https://diverse.direct/daisyworld/dswd2/"  target="_blank">DIVERSE DIRECT</a></li>
+      <li><a href="http://shop.comiczin.jp/products/detail.php?product_id=25663"  target="_blank">COMIC ZIN</a></li>
+      <li><a href="https://diverse.direct/daisyworld/dswd2/"  target="_blank">DIVERSE DIRECT</a></li>
     </ul>
   </article>
   <article id="cuts">
