メンバー修正

--- a/dswd3/index.html
+++ b/dswd3/index.html
@@ -13,7 +13,7 @@
   <meta property="og:description" content="創作SF絵本「DAISYWORLD: A to Z」は2015.8.16のC88・3日目に西り-26abにて頒布されます。" />
   <meta property="og:type" content="website" />
   <meta property="og:url" content="http://dswd.jp/dswd/2" />
-  <meta property="og:image" content="http://dswd.jp/images/dswd2/card.png" />
+  <meta property="og:image" content="http://dswd.jp/images/dswd3/card.png" />
   <meta property="og:site_name" content="DAISYWORLD" />
 
   <meta property="article:publisher" content="DAISYWORLD" />
@@ -22,7 +22,7 @@
   <meta name="twitter:site" content="@daisyworld_info">
   <meta name="twitter:title" content="DAISYWORLD: A to Z">
   <meta name="twitter:description" content="創作SF絵本「DAISYWORLD: A to Z」は2015.8.16のC88・3日目に西り-26abにて頒布されます。">
-  <meta name="twitter:image" content="http://dswd.jp/images/dswd2/card.png">
+  <meta name="twitter:image" content="http://dswd.jp/images/dswd3/card.png">
 
   <link rel="shortcut icon" href="/images/icon.png">
   <link rel="stylesheet" href="/css/style.css" />
@@ -42,9 +42,9 @@
     </ul>
   </nav>
   <header>
-    <p class="logo"><img src="/images/dswd2/dd.svg" width="150" alt="DAISYWORLD"></p>
+    <p class="logo"><img src="/images/dswd3/dd.svg" width="150" alt="DAISYWORLD"></p>
     <h1><span>DAISYWORLD: A to Z</span></h1>
-    <p>Picture and Storytelling / 182mm x 182mm, 32 Pages</p>
+    <p>Picture and Storytelling / 210mm x 257mm, 36 Pages</p>
   </header>
   <article id="product">
     <h2>A.D.2015.12.31 Comic Market 89 3日目<br>東A77ab &ldquo;Futon. + DAISYWORLD&rdquo;（<a href="http://webcatalog.circle.ms/Circle/12342477">circle.ms</a>）</h2>
@@ -59,47 +59,74 @@
       </li>
       <li>
         <div class="name">Dimension</div>
-        <div>182mm x 182mm</div>
+        <div>210mm x 257mm</div>
       </li>
       <li>
         <div class="name">Print</div>
-        <div>表紙・カッティング加工済み5色印刷 / 本文・2色印刷 / 32 Pages</div>
+        <div>表紙・カッティング加工済み5色印刷 / 本文・2色印刷 / 36 Pages</div>
       </li>
     </ul>
   </article>
   <article id="buy">
     <h2>Buy on shop</h2>
     <ul class="links">
-      <li><a href="http://shop.comiczin.jp/products/detail.php?product_id=25663"  target="_blank">COMIC ZIN</a></li>
-      <li><a href="https://diverse.direct/daisyworld/dswd2/"  target="_blank">DIVERSE DIRECT</a></li>
+      <li>COMIC ZIN</li>
+      <li>DIVERSE DIRECT</li>
     </ul>
   </article>
   <article id="cuts">
     <ul >
-      <li><img src="/images/dswd2/img_01.jpg" width="100%"></li>
-      <li><img src="/images/dswd2/img_02.jpg" width="100%"></li>
-      <li><img src="/images/dswd2/img_03.jpg" width="100%"></li>
-      <li><img src="/images/dswd2/img_04.jpg" width="100%"></li>
-      <li><img src="/images/dswd2/img_05.jpg" width="100%"></li>
+      <li><img src="/images/dswd3/img_01.jpg" width="100%"></li>
+      <li><img src="/images/dswd3/img_02.jpg" width="100%"></li>
+      <li><img src="/images/dswd3/img_03.jpg" width="100%"></li>
+      <li><img src="/images/dswd3/img_04.jpg" width="100%"></li>
+      <li><img src="/images/dswd3/img_05.jpg" width="100%"></li>
     </ul>
   </article>
   <article id="about">
     <h2>内容紹介</h2>
-    <p>DAISYWORLDの最初のキャラクターは、100年後から呼び出された「新知性」と呼ばれる存在「デイジー」です。<br>彼女と現代の人類が彼女を模倣して開発した、ステムと呼ばれるアンドロイド群の一人「ミラ」の出会いをエンジニア / 作家である <a href="http://twitter.com/shachi" target="_blank">@shachi</a> さんによるストーリーを基に絵本のかたちに編集しました。</p>
-    <p>二人の出会いはまったくの対象形に描かれています。正方形フォーマットの本はリバーシブルの表紙で、片方がデイジーの視点から描かれるストーリー、そしてもう片方がミラの視点となっています。二人の視点の違いを出すために、デイジーのストーリーを描写した <a href="http://twitter.com/kirusu" target="_blank">@kirusu</a> さんに加えて <a href="http://twitter.com/yam_cha" target="_blank">@yam_cha</a> さんにミラ側のストーリーをご担当いただいています。お二人が異なる解釈によって取り組まれたイラストレーションの数々を是非、ご覧ください。</p>
-    <p>加えて、気鋭のイラストレーター・ <a href="http://twitter.com/tanakahirotaka" target="_blank">@tanakahirotaka</a> さんと <a href="http://twitter.com/hami_mi" target="_blank">@hami_mi</a> さんに寄って描かれたゲストイラストレーションや、デイジーとミラが使用しているガジェットについての設定と解説も追加しています。こちらも併せて、お楽しみいただければと思います。</p>
+    <p>これまでのコンセプトブック、ストーリーブックに続いて、今回は「DAISYWORLD」の世界観に関するさまざまな用語について再定義を行い、テキスト、イラストレーション、キャラクターデザインなどの手法で解説しています。アテンダントをはじめとするテクノロジーの解説をはじめ、DAISYWORLDの世界観をかたちづくるキーワードや組織・団体についてコンセプトアートやグラフィックデザインを交えつつ改めて紹介。
+      さらに、<a href="http://twitter.com/kirusu" target="_blank">@kirusu</a> さんがキャラクターデザインを担当したミラ以外のステムたち（姉弟たち）のキャラクターデザインを <a href="http://twitter.com/mashana" target="_blank">@mashana</a> さん、<a href="http://twitter.com/MikaPikazo" target="_blank">@MikaPikazo</a> さん、<a href="http://twitter.com/simadoriru" target="_blank">@simadoriru</a> さんたちにも創作していただきました。
+      カバーイラストにはグラフィッカーの <a href="http://twitter.com/yoshida_seiji" target="_blank">@yoshida_seiji</a> さんにご協力いただき、 <a href="http://twitter.com/yam_cha" target="_blank">@yam_cha</a> さん、<a href="http://twitter.com/fujino114" target="_blank">@fujino114</a> さんにもイラスト寄稿としてご参加いただいております。</p>
+
     <ul class="detail">
       <li>
-        <div class="name">ゲストイラスト</div>
-        <div>田中寛崇 / はみ</div>
+        <div class="name">キャラクター設定</div>
+        <div>デイジー / エル / ジュリア / ミラ / ジルコン</div>
       </li>
       <li>
-        <div class="name">ガジェット解説</div>
-        <div>デイジーのスマートフォンとPHRCのタブレット / ミラの子供向けスマートフォン</div>
+        <div class="name">テクノロジー解説</div>
+        <div>アテンダント / ビット・インプラント / インキュナブラ / ユニ・ファイバー <br> ハーヴェスト / キネティック・ニュートラル / イエローストーン</div>
       </li>
       <li>
-        <div class="name">ストーリー</div>
-        <div>A GIRL MEETS HER SISTER</div>
+        <div class="name">世界観</div>
+        <div>色と姿勢 / ラーメン / オーシャン・ドーム <br> この世界の生活について / 東京沿岸部消失事変 / 事変当日</div>
+      </li>
+      <li>
+        <div class="name">組織・団体</div>
+        <div>ガーデン / PHRC / ステムとシード / ウォーターマーク</div>
+      </li>
+      <li>
+        <div class="name">キーワード</div>
+        <div>新知性と意識の交換 / 交通について</div>
+      </li>
+    </ul>
+    <ul class="detail">
+      <li>
+        <div class="name">キャラクターデザイン</div>
+        <div>kirusu / 宮﨑真一朗 / Mika Pikazo / しまどりる</div>
+      </li>
+      <li>
+        <div class="name">カバーイラスト</div>
+        <div>吉田誠治</div>
+      </li>
+      <li>
+        <div class="name">イラスト</div>
+        <div>kirusu / やむ茶 / 富士フジノ</div>
+      </li>
+      <li>
+        <div class="name">テキスト</div>
+        <div>shachi</div>
       </li>
     </ul>
   </article>
@@ -127,36 +154,44 @@
         <div class="role">Graphics</div>
       </li>
       <li>
-        <div class="name">ginrei</div>
-        <div class="url"><a href="http://twitter.com/ginrei" target="_blank">@ginrei</a></div>
-        <div class="role">Concept, Research</div>
+        <div class="name">Mika Pikazo</div>
+        <div class="url"><a href="http://twitter.com/MikaPikazo" target="_blank">@MikaPikazo</a></div>
+        <div class="role">Character Design</div>
       </li>
       <li>
-        <div class="name">shachi</div>
-        <div class="url"><a href="http://twitter.com/shachi" target="_blank">@shachi</a></div>
-        <div class="role">Story of &ldquo;DAISYWORLD: A to Z&rdquo;</div>
+        <div class="name">しまどりる</div>
+        <div class="url"><a href="http://twitter.com/simadoriru" target="_blank">@simadoriru</a></div>
+        <div class="role">Character Design</div>
+      </li>
+      <li>
+        <div class="name">吉田誠治</div>
+        <div class="url"><a href="http://twitter.com/yoshida_seiji" target="_blank">@yoshida_seiji</a></div>
+        <div class="role">Cover Illustration of &ldquo;DAISYWORLD: A to Z&rdquo;</div>
       </li>
       <li>
         <div class="name">やむ茶</div>
         <div class="url"><a href="http://twitter.com/yam_cha" target="_blank">@yam_cha</a></div>
-        <div class="role">Illusration of &ldquo;DAISYWORLD: A to Z&rdquo;</div>
+        <div class="role">Illustration of &ldquo;DAISYWORLD: A to Z&rdquo;</div>
+      </li>
+      <li>
+        <div class="name">富士フジノ</div>
+        <div class="url"><a href="http://twitter.com/fujino114" target="_blank">@fujino114</a></div>
+        <div class="role">Illustration of &ldquo;DAISYWORLD: A to Z&rdquo;</div>
+      </li>
+      <li>
+        <div class="name">shachi</div>
+        <div class="url"><a href="http://twitter.com/shachi" target="_blank">@shachi</a></div>
+        <div class="role">Text of &ldquo;DAISYWORLD: A to Z&rdquo;</div>
       </li>
       <li>
         <div class="name">Toshiki Izumi</div>
         <div class="url"><a href="http://twitter.com/toshiki_izumi" target="_blank">@toshiki_izumi</a></div>
         <div class="role">Technical Direction, Website</div>
       </li>
-    </ul>
-    <ul class="member">
       <li>
-        <div class="name">田中寛崇</div>
-        <div class="url"><a href="http://twitter.com/tanakahirotaka" target="_blank">@tanakahirotaka</a></div>
-        <div class="role">Guest Illustration</div>
-      </li>
-      <li>
-        <div class="name">はみ</div>
-        <div class="url"><a href="http://twitter.com/hami_mi" target="_blank">@hami_mi</a></div>
-        <div class="role">Guest Illustration</div>
+        <div class="name">ginrei</div>
+        <div class="url"><a href="http://twitter.com/ginrei" target="_blank">@ginrei</a></div>
+        <div class="role">Concept, Research</div>
       </li>
     </ul>
   </article>
