--- a/index.html
+++ b/index.html
@@ -126,10 +126,30 @@
       <li>
         <div class="name">Toshiki Izumi</div>
         <div class="url"><a href="http://twitter.com/toshiki_izumi" target="_blank">@toshiki_izumi</a></div>
-        <div class="role">Website</div>
+        <div class="role">Technical Direction, Website</div>
       </li>
     </ul>
     <ul class="member">
+      <li>
+        <div class="name">Mika Pikazo</div>
+        <div class="url"><a href="http://twitter.com/MikaPikazo" target="_blank">@MikaPikazo</a></div>
+        <div class="role">Character Design on &ldquo;DAISYWORLD: A to Z&rdquo;</div>
+      </li>
+      <li>
+        <div class="name">しまどりる</div>
+        <div class="url"><a href="http://twitter.com/simadoriru" target="_blank">@simadoriru</a></div>
+        <div class="role">Character Design on &ldquo;DAISYWORLD: A to Z&rdquo;</div>
+      </li>
+      <li>
+        <div class="name">吉田誠治</div>
+        <div class="url"><a href="http://twitter.com/yoshida_seiji" target="_blank">@yoshida_seiji</a></div>
+        <div class="role">Guest Illustration on &ldquo;DAISYWORLD: A to Z&rdquo;</div>
+      </li>
+      <li>
+        <div class="name">富士フジノ</div>
+        <div class="url"><a href="http://twitter.com/fujino114" target="_blank">@fujino114</a></div>
+        <div class="role">Guest Illustration on &ldquo;DAISYWORLD: A to Z&rdquo;</div>
+      </li>
       <li>
         <div class="name">田中寛崇</div>
         <div class="url"><a href="http://twitter.com/tanakahirotaka" target="_blank">@tanakahirotaka</a></div>
@@ -166,6 +186,8 @@
         <div class="role">Guest Illustration on &ldquo;DAISYWORLD 1&rdquo;</div>
       </li>
     </ul>
+
+
   </article>
   <footer>
     <p>&copy; 2015 DAISYWORLD | <a href="http://twitter.com/daisyworld_info" target="_blank">@daisyworld_info</a></p>
