--- a/dswd3/index.html
+++ b/dswd3/index.html
@@ -10,7 +10,7 @@
   <meta name="viewport" content="width=1000px">
 
   <meta property="og:title" content="DAISYWORLD: A to Z" />
-  <meta property="og:description" content="創作SF絵本「DAISYWORLD: A to Z」は2015.8.16のC88・3日目に西り-26abにて頒布されます。" />
+  <meta property="og:description" content="「DAISYWORLD: A to Z」は2015.12.31のC89・3日目に東A77abにて頒布されます。" />
   <meta property="og:type" content="website" />
   <meta property="og:url" content="http://dswd.jp/dswd/2" />
   <meta property="og:image" content="http://dswd.jp/images/dswd3/card.png" />
@@ -21,7 +21,7 @@
   <meta name="twitter:card" content="summary_large_image">
   <meta name="twitter:site" content="@daisyworld_info">
   <meta name="twitter:title" content="DAISYWORLD: A to Z">
-  <meta name="twitter:description" content="創作SF絵本「DAISYWORLD: A to Z」は2015.8.16のC88・3日目に西り-26abにて頒布されます。">
+  <meta name="twitter:description" content="「DAISYWORLD: A to Z」は2015.12.31のC89・3日目に東A77abにて頒布されます。">
   <meta name="twitter:image" content="http://dswd.jp/images/dswd3/card.png">
 
   <link rel="shortcut icon" href="/images/icon.png">
@@ -44,18 +44,18 @@
   <header>
     <p class="logo"><img src="/images/dswd3/dd.svg" width="150" alt="DAISYWORLD"></p>
     <h1><span>DAISYWORLD: A to Z</span></h1>
-    <p>Picture and Storytelling / 210mm x 257mm, 36 Pages</p>
+    <p>Enhanced Concept Book / 210mm x 257mm, 36 Pages</p>
   </header>
   <article id="product">
     <h2>A.D.2015.12.31 Comic Market 89 3日目<br>東A77ab &ldquo;Futon. + DAISYWORLD&rdquo;（<a href="http://webcatalog.circle.ms/Circle/12342477">circle.ms</a>）</h2>
-    <p class="lead">Picture and Storytelling Book based on DAISYWORLD Settings</p>
+    <p class="lead">Enhanced Concept Book for DAISYWORLD</p>
     <ul class="spec">
       <li>
         <div class="code">DSWD3</div>
       </li>
       <li>
         <div class="name">Price on Event</div>
-        <div>800 JPY</div>
+        <div>1000 JPY</div>
       </li>
       <li>
         <div class="name">Dimension</div>
@@ -63,7 +63,7 @@
       </li>
       <li>
         <div class="name">Print</div>
-        <div>表紙・カッティング加工済み5色印刷 / 本文・2色印刷 / 36 Pages</div>
+        <div>表紙・カッティング、糸綴じ加工 / 本文・フルカラーFMスクリーン印刷 / 36 Pages</div>
       </li>
     </ul>
   </article>
