テキスト修正

--- a/dswd3/index.html
+++ b/dswd3/index.html
@@ -6,13 +6,13 @@
   <title>DAISYWORLD: A to Z</title>
 
   <meta name="description" content="A platform of science fiction&#039;s world for creators" />
-  <meta name="keywords" content="DAISYWORLD,SF,Science Fiction,コミックマーケット,COMICMARKET,コミケ,C88,tatsdesign,sezitak,kirusu,ginrei,mashana,shachi,yam_cha,toshiki_izumi" />
+  <meta name="keywords" content="DAISYWORLD,SF,Science Fiction,コミックマーケット,COMICMARKET,コミケ,C89,tatsdesign,sezitak,kirusu,ginrei,mashana,MikaPikaZo,simadoriru,yoshida_seiji,fujino114,shachi,yam_cha,toshiki_izumi" />
   <meta name="viewport" content="width=1000px">
 
   <meta property="og:title" content="DAISYWORLD: A to Z" />
   <meta property="og:description" content="「DAISYWORLD: A to Z」は2015.12.31のC89・3日目に東A77abにて頒布されます。" />
   <meta property="og:type" content="website" />
-  <meta property="og:url" content="http://dswd.jp/dswd/2" />
+  <meta property="og:url" content="http://dswd.jp/dswd3" />
   <meta property="og:image" content="http://dswd.jp/images/dswd3/card.png" />
   <meta property="og:site_name" content="DAISYWORLD" />
 
@@ -85,36 +85,36 @@
   </article>
   <article id="about">
     <h2>内容紹介</h2>
-    <p>これまでのコンセプトブック、ストーリーブックに続いて、今回は「DAISYWORLD」の世界観に関するさまざまな用語について再定義を行い、テキスト、イラストレーション、キャラクターデザインなどの手法で解説しています。アテンダントをはじめとするテクノロジーの解説をはじめ、DAISYWORLDの世界観をかたちづくるキーワードや組織・団体についてコンセプトアートやグラフィックデザインを交えつつ改めて紹介。
-      さらに、<a href="http://twitter.com/kirusu" target="_blank">@kirusu</a> さんがキャラクターデザインを担当したミラ以外のステムたち（姉弟たち）のキャラクターデザインを <a href="http://twitter.com/mashana" target="_blank">@mashana</a> さん、<a href="http://twitter.com/MikaPikazo" target="_blank">@MikaPikazo</a> さん、<a href="http://twitter.com/simadoriru" target="_blank">@simadoriru</a> さんたちにも創作していただきました。
-      カバーイラストにはグラフィッカーの <a href="http://twitter.com/yoshida_seiji" target="_blank">@yoshida_seiji</a> さんにご協力いただき、 <a href="http://twitter.com/yam_cha" target="_blank">@yam_cha</a> さん、<a href="http://twitter.com/fujino114" target="_blank">@fujino114</a> さんにもイラスト寄稿としてご参加いただいております。</p>
+    <p>今回は、これまでのDAISYWORLDに関するさまざまな用語について再定義とアップデートを行い、テキスト、インフォグラフィック、イラストレーション、キャラクターデザインなどの手法を用いてAからZまでの26キーワードについて解説しています。アテンダントをはじめとするテクノロジーの解説をはじめ、DAISYWORLDの世界観をかたちづくるキーワードや組織・団体について追加情報を交えつつ改めて紹介。
+      さらに、<a href="http://twitter.com/kirusu" target="_blank">@kirusu</a> さんがキャラクターデザインを担当したミラ以外の人工生命＝ステムたちのキャラクターデザインを <a href="http://twitter.com/mashana" target="_blank">@mashana</a> さん、<a href="http://twitter.com/MikaPikazo" target="_blank">@MikaPikazo</a> さん、<a href="http://twitter.com/simadoriru" target="_blank">@simadoriru</a> さんたちにも創作していただきました。
+      カバーイラストにはグラフィッカーの <a href="http://twitter.com/yoshida_seiji" target="_blank">@yoshida_seiji</a> さんにご協力いただき、前作「A GIRL MEETS HER SISTER」にてイラストレーションをご担当いただいた <a href="http://twitter.com/yam_cha" target="_blank">@yam_cha</a> さん、そして新進気鋭のイラストレーター・<a href="http://twitter.com/fujino114" target="_blank">@fujino114</a> さんにも寄稿いただいております。</p>
 
     <ul class="detail">
       <li>
         <div class="name">キャラクター設定</div>
-        <div>デイジー / エル / ジュリア / ミラ / ジルコン</div>
+        <div>〔D〕デイジー / 〔E〕エル / 〔J〕ジュリア / 〔M〕ミラ / 〔Z〕ジルコン</div>
       </li>
       <li>
         <div class="name">テクノロジー解説</div>
-        <div>アテンダント / ビット・インプラント / インキュナブラ / ユニ・ファイバー <br> ハーヴェスト / キネティック・ニュートラル / イエローストーン</div>
+        <div>〔A〕アテンダント / 〔B〕ビット・インプラント / 〔I〕インキュナブラ / 〔U〕ユニ・ファイバー <br> 〔H〕ハーヴェスト / 〔K〕キネティック・ニュートラル / 〔Y〕イエローストーン</div>
       </li>
       <li>
         <div class="name">世界観</div>
-        <div>色と姿勢 / ラーメン / オーシャン・ドーム <br> この世界の生活について / 東京沿岸部消失事変 / 事変当日</div>
+        <div>〔C〕色と姿勢 / 〔N〕ラーメン / 〔O〕オーシャン・ドーム <br> 〔Q〕この世界の生活について / 〔V〕東京沿岸部消失事変 / 〔X〕事変当日</div>
       </li>
       <li>
         <div class="name">組織・団体</div>
-        <div>ガーデン / PHRC / ステムとシード / ウォーターマーク</div>
+        <div>〔G〕GARDEN / 〔P〕PHRC / 〔W〕ウォーターマーク</div>
       </li>
       <li>
         <div class="name">キーワード</div>
-        <div>新知性と意識の交換 / 交通について</div>
+        <div>〔R〕新知性と意識の交換 / 〔S〕ステムとシード / 〔T〕交通について</div>
       </li>
     </ul>
     <ul class="detail">
       <li>
         <div class="name">キャラクターデザイン</div>
-        <div>kirusu / 宮﨑真一朗 / Mika Pikazo / しまどりる</div>
+        <div>kirusu / Shinichiro Miyazaki / Mika Pikazo / しまどりる</div>
       </li>
       <li>
         <div class="name">カバーイラスト</div>
