--- a/dswd3/index.html
+++ b/dswd3/index.html
@@ -85,8 +85,8 @@
   </article>
   <article id="about">
     <h2>内容紹介</h2>
-    <p>今回は、これまでのDAISYWORLDに関するさまざまな用語について再定義とアップデートを行い、テキスト、インフォグラフィック、イラストレーション、キャラクターデザインなどの手法を用いてAからZまでの26キーワードについて解説しています。アテンダントをはじめとするテクノロジーの解説をはじめ、DAISYWORLDの世界観をかたちづくるキーワードや組織・団体について追加情報を交えつつ改めて紹介。
-      さらに、<a href="http://twitter.com/kirusu" target="_blank">@kirusu</a> さんがキャラクターデザインを担当したミラ以外の人工生命＝ステムたちのキャラクターデザインを <a href="http://twitter.com/mashana" target="_blank">@mashana</a> さん、<a href="http://twitter.com/MikaPikazo" target="_blank">@MikaPikazo</a> さん、<a href="http://twitter.com/simadoriru" target="_blank">@simadoriru</a> さんたちにも創作していただきました。
+    <p>今回は、これまでのDAISYWORLDに関するさまざまな用語について再定義とアップデートを行い、テキスト、インフォグラフィック、イラストレーション、キャラクターデザインなどの手法を用いてAからZまでの26キーワードについて解説しています。アテンダントをはじめとするテクノロジーの解説をはじめ、DAISYWORLDの世界観をかたちづくるキーワードや組織・団体について追加情報を交えつつ改めてご紹介。<br>
+      さらに、<a href="http://twitter.com/kirusu" target="_blank">@kirusu</a> さんがキャラクターデザインを担当したミラ以外の人工生命＝ステムたちのキャラクターデザインを <a href="http://twitter.com/mashana" target="_blank">@mashana</a> さん、<a href="http://twitter.com/MikaPikazo" target="_blank">@MikaPikazo</a> さん、<a href="http://twitter.com/simadoriru" target="_blank">@simadoriru</a> さんたちにも創作していただきました。<br>
       カバーイラストにはグラフィッカーの <a href="http://twitter.com/yoshida_seiji" target="_blank">@yoshida_seiji</a> さんにご協力いただき、前作「A GIRL MEETS HER SISTER」にてイラストレーションをご担当いただいた <a href="http://twitter.com/yam_cha" target="_blank">@yam_cha</a> さん、そして新進気鋭のイラストレーター・<a href="http://twitter.com/fujino114" target="_blank">@fujino114</a> さんにも寄稿いただいております。</p>
 
     <ul class="detail">
@@ -96,7 +96,7 @@
       </li>
       <li>
         <div class="name">テクノロジー解説</div>
-        <div>〔A〕アテンダント / 〔B〕ビット・インプラント / 〔I〕インキュナブラ / 〔U〕ユニ・ファイバー <br> 〔H〕ハーヴェスト / 〔K〕キネティック・ニュートラル / 〔Y〕イエローストーン</div>
+        <div>〔A〕アテンダント / 〔B〕ビット・インプラント / 〔H〕ハーヴェスト <br>〔I〕インキュナブラ / 〔K〕キネティック・ニューラル <br>〔U〕ユニ・ファイバー / 〔Y〕イエローストーン</div>
       </li>
       <li>
         <div class="name">世界観</div>
