テキスト修正

--- a/dswd3/index.html
+++ b/dswd3/index.html
@@ -85,9 +85,7 @@
   </article>
   <article id="about">
     <h2>内容紹介</h2>
-    <p>今回は、これまでのDAISYWORLDに関するさまざまな用語について再定義とアップデートを行い、テキスト、インフォグラフィック、イラストレーション、キャラクターデザインなどの手法を用いてAからZまでの26キーワードについて解説しています。アテンダントをはじめとするテクノロジーの解説をはじめ、DAISYWORLDの世界観をかたちづくるキーワードや組織・団体について追加情報を交えつつ改めてご紹介。<br>
-      さらに、<a href="http://twitter.com/kirusu" target="_blank">@kirusu</a> さんがキャラクターデザインを担当したミラ以外の人工生命＝ステムたちのキャラクターデザインを <a href="http://twitter.com/mashana" target="_blank">@mashana</a> さん、<a href="http://twitter.com/MikaPikazo" target="_blank">@MikaPikazo</a> さん、<a href="http://twitter.com/simadoriru" target="_blank">@simadoriru</a> さんたちにも創作していただきました。<br>
-      カバーイラストにはグラフィッカーの <a href="http://twitter.com/yoshida_seiji" target="_blank">@yoshida_seiji</a> さんにご協力いただき、前作「A GIRL MEETS HER SISTER」にてイラストレーションをご担当いただいた <a href="http://twitter.com/yam_cha" target="_blank">@yam_cha</a> さん、そして新進気鋭のイラストレーター・<a href="http://twitter.com/fujino114" target="_blank">@fujino114</a> さんにも寄稿いただいております。</p>
+    <p>今回は、これまで1年間の間に書き加えられてきたDAISYWORLDに関するさまざまな用語について、再定義とアップデートを行い、テキスト・インフォグラフィック・イラストレーション・キャラクターデザインなどの手法を用いてAからZまでの26キーワードについて解説しています。アテンダントをはじめとするテクノロジーの解説をはじめ、DAISYWORLDの世界観をかたちづくる世界観や組織・団体について追加情報を交えつつ改めてご紹介。象徴的な事件である「東京都沿岸部消失事変」についても <a href="http://twitter.com/shachi" target="_blank">@shachi</a> さんによるストーリーを追加し、当時の様子を補強しています。さらにキャラクター面でも改訂を行いました。<a href="http://twitter.com/kirusu" target="_blank">@kirusu</a> さんによる新知性「デイジー」と人工生命「ミラ」は2015年版の新規デザインを追加し、ミラ以外の人工生命＝ステムたちのキャラクターデザインを <a href="http://twitter.com/mashana" target="_blank">@mashana</a> さん、<a href="http://twitter.com/MikaPikazo" target="_blank">@MikaPikazo</a> さん、<a href="http://twitter.com/simadoriru" target="_blank">@simadoriru</a> さんたちにも創作していただきました。カバーイラストにはグラフィッカーの <a href="http://twitter.com/yoshida_seiji" target="_blank">@yoshida_seiji</a> さんにご協力いただき、前作「A GIRL MEETS HER SISTER」にてイラストレーションをご担当いただいた <a href="http://twitter.com/yam_cha" target="_blank">@yam_cha</a> さん、そして新進気鋭のイラストレーター・<a href="http://twitter.com/fujino114" target="_blank">@fujino114</a> さんにもご寄稿いただきました。</p>
 
     <ul class="detail">
       <li>
